# MPT

./: config.example.toml  docker-compose.release.yml  easy.md  plan.md  pyproject.toml  requirements.txt
app/config/: config.py
app/models/: schema.py
app/services/: documentary_sync.py  llm.py  material.py  task.py  video.py  voice.py
app/services/chatterbox_local/: engine.py  tone_planner.py
app/services/chatterbox_local/assets/: tone_catalog.yaml
lan/: mdns_advertise.py  start.sh
scripts/: lan_start.sh  mac_free_memory.sh  split_task_logs.sh  task_progress.sh
test/services/: test_chatterbox_local.py  test_documentary_sync.py  test_llm.py  test_material.py  test_schema.py  test_task.py  test_video.py  test_voice.py
webui/: Main.py
webui/i18n/: en.json  ru.json
